--- a/client/views/partials/gps/trackView.html
+++ b/client/views/partials/gps/trackView.html
@@ -1,12 +1,31 @@
 <div class="col-xs-12 gpsListView" ng-controller="TruckTrackingController">
     <div class="col-xs-12">
         <div class="lisk-block col-xs-12">
+            <!--<div class="col-xs-12">-->
+                <!--<ul>-->
+
+                    <!--<li class="vehicle1"><h2>All Vehicles Location</h2></li>-->
+
+                    <!--<li class="sea-wid1">-->
+                        <!--<div class="search-box1">-->
+                            <!--<input type="text" class="form-control textfiled1" placeholder="search">-->
+                            <!--<input type="button" class="sea-btn">-->
+                        <!--</div>-->
+                        <!--<div class="clearfix"></div>-->
+                    <!--</li>-->
+
+                    <!--<li class="map-wid"><a href="#" class="map activeView" ui-sref="mapView">Map view</a></li>-->
+
+                    <!--<li class="map-wid"><a href="#" class="map" ui-sref="listView">List view</a></li>-->
+
+                    <!--<li  class="mar-rgt-space pull-right map-wid"><a href="#" class="map" ui-sref="gpsReports">Reports</a></li>-->
+
+                <!--</ul>-->
+            <!--</div>-->
             <div class="col-xs-12">
-                <ul>
-
-                    <li class="vehicle1"><h2>All Vehicles Location</h2></li>
-
-                    <li class="sea-wid1">
+                <ul class="list-inline">
+                    <li class="col-sm-4"><h2>All Vehicles Location</h2></li>
+                    <li class="col-sm-4">
                         <div class="search-box1">
                             <input type="text" class="form-control textfiled1" placeholder="search">
                             <input type="button" class="sea-btn">
@@ -14,9 +33,9 @@
                         <div class="clearfix"></div>
                     </li>
 
-                    <li class="map-wid"><a href="#" class="map activeView" ui-sref="mapView">Map view</a></li>
+                    <li class=" "><a href="#" class="map activeView" ui-sref="mapView">Map view</a></li>
 
-                    <li class="map-wid"><a href="#" class="map" ui-sref="listView">List view</a></li>
+                    <li class=""><a href="#" class="map" ui-sref="listView">List view</a></li>
 
                     <li  class="mar-rgt-space pull-right map-wid"><a href="#" class="map" ui-sref="gpsReports">Reports</a></li>
 
