--- a/client/views/partials/party/edit-party.html
+++ b/client/views/partials/party/edit-party.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col-xs-12 pall-zero">
                     <div class="form-group sms-email col-xs-12">
-                        <div class="sms col-xs-6">
+                        <div class="sms col-xs-4">
                             <div class="radio">
                                 <label>
                                     <input type="radio" ng-model="party.partyType" name="radio" value="Transporter">
@@ -48,7 +48,7 @@
                                 </label>
                             </div>
                         </div>
-                        <div class="email col-xs-6">
+                        <div class="email col-xs-4">
                             <div class="radio">
                                 <label>
                                     <input type="radio" ng-model="party.partyType" name="radio" value="Supplier">
@@ -56,6 +56,17 @@
                                         <i class="rad-icon fa fa-circle"></i>
                                     </span>
                                     Supplier
+                                </label>
+                            </div>
+                        </div>
+                        <div class="email col-xs-4">
+                            <div class="radio">
+                                <label>
+                                    <input type="radio" ng-model="party.partyType" name="radio" value="Commission">
+                                    <span class="cr">
+                                        <i class="rad-icon fa fa-circle"></i>
+                                    </span>
+                                    Commission
                                 </label>
                             </div>
                         </div>
