--- a/client/views/partials/trucks/trucks-edit.html
+++ b/client/views/partials/trucks/trucks-edit.html
@@ -53,7 +53,7 @@
             </div>
             <div class="form-group col-xs-12">
                 <div class="styling-input-list">
-                   <select class="form-control custom-form-control"  ng-model="truck.VehicleType">
+                   <select class="form-control custom-form-control"  ng-model="truck.vehicleType">
                        <option value="">Select Vehicle type</option>
                        <option>Car</option>
                        <option>Truck</option>
