--- a/client/views/partials/admin/services/addNewAccount.html
+++ b/client/views/partials/admin/services/addNewAccount.html
@@ -45,7 +45,7 @@
 
                     <div class="col-sm-6">
                         <div class="form-group styling-input-list">
-                            <input type="password" class="form-control custom-form-control"
+                            <input type="text" class="form-control custom-form-control"
                                    ng-model="accountDetails.password"/>
                             <label class="focus-effect-for-input">Password*</label>
                         </div>
