--- a/client/views/partials/admin/customers/customersLead.html
+++ b/client/views/partials/admin/customers/customersLead.html
@@ -13,9 +13,9 @@
         <li class="col-xs-4 pull-right">
             <form role="search">
                 <div class="input-group add-on">
-                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" ng-model="customerLeadSearch" ng-change="initCustomerLeads('', customerLeadSearch);">
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" ng-model="customerLeadSearch">
                     <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        <button class="btn btn-default" type="submit"  ng-click="initCustomerLeads('', customerLeadSearch);"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
                 </div>
             </form>
