--- a/client/views/partials/admin/customers/factoryOwners.html
+++ b/client/views/partials/admin/customers/factoryOwners.html
@@ -12,8 +12,8 @@
         <li class="col-xs-4 pull-right">
             <form role="search">
                 <div class="input-group add-on">
-                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" ng-model="factoryOwner1" ng-change="searchByFactoryOwner(factoryOwner1);">
-                    <div class="input-group-btn">
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" ng-model="factoryOwner1" >
+                    <div class="input-group-btn" ng-click="searchByFactoryOwner(factoryOwner1);">
                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
                 </div>
@@ -70,8 +70,8 @@
                             class="glyphicon glyphicon-trash  "></span></a>
                 </td>
             </tr>
-            <tr ng-if="!currentPageOfFactoryOwners || currentPageOfFactoryOwners.length === 0">
-                <td colspan="8">No Factory Owner Records exist.</td>
+            <tr ng-if="!currentPageOfFactoryOwners || currentPageOfFactoryOwners.length === 0" class="text-center">
+                <td colspan="11">No Factory Owner Records exist.</td>
             </tr>
         </table>
     </div>
