--- a/client/views/partials/admin/customers/guests.html
+++ b/client/views/partials/admin/customers/guests.html
@@ -12,8 +12,8 @@
         <li class="col-xs-4 pull-right">
             <form role="search">
                 <div class="input-group add-on">
-                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" ng-model="guest1" ng-change="searchByGuest(guest1);">
-                    <div class="input-group-btn">
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" ng-model="guest1" >
+                    <div class="input-group-btn" ng-click="searchByGuest(guest1);">
                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
                 </div>
@@ -67,8 +67,8 @@
                             class="glyphicon glyphicon-trash  "></span></a>
                 </td>
             </tr>
-            <tr ng-if="!currentPageOfGuests || currentPageOfGuests.length === 0">
-                <td colspan="8">No Guest Records exist.</td>
+            <tr ng-if="!currentPageOfGuests || currentPageOfGuests.length === 0" class="text-center">
+                <td colspan="12">No Guest Records exist.</td>
             </tr>
         </table>
     </div>
