--- a/client/views/partials/admin/customers/restOfAll.html
+++ b/client/views/partials/admin/customers/restOfAll.html
@@ -17,8 +17,8 @@
             <form role="search">
                 <div class="input-group add-on">
                     <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term"
-                           ng-model="junkLeadSearch1" ng-change="initRestOfAll('', junkLeadSearch1);">
-                    <div class="input-group-btn">
+                           ng-model="junkLeadSearch1" >
+                    <div class="input-group-btn" ng-click="initRestOfAll('', junkLeadSearch1);">
                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
                         </button>
                     </div>
@@ -57,7 +57,7 @@
                 </td>
             </tr>
             <tr ng-if="!currentPageOfrestOfAll || currentPageOfrestOfAll.length === 0">
-                <td colspan="8">No Records exist.</td>
+                <td colspan="9">No Records exist.</td>
             </tr>
         </table>
     </div>
