--- a/client/views/partials/admin/customers/transporters.html
+++ b/client/views/partials/admin/customers/transporters.html
@@ -15,8 +15,8 @@
         <li class="col-xs-4 pull-right">
             <form role="search">
                 <div class="input-group add-on">
-                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" ng-model="transporter1" ng-change="searchByTransporter(transporter1);">
-                    <div class="input-group-btn">
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" ng-model="transporter1" >
+                    <div class="input-group-btn" ng-click="searchByTransporter(transporter1);">
                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
                 </div>
@@ -67,8 +67,8 @@
                             class="glyphicon glyphicon-trash  "></span></a>
                 </td>
             </tr>
-            <tr ng-if="!currentPageOfTransporters || currentPageOfTransporters.length === 0">
-                <td colspan="8">No Transporters Records exist.</td>
+            <tr ng-if="!currentPageOfTransporters || currentPageOfTransporters.length === 0" class="text-center">
+                <td colspan="10">No Transporters Records exist.</td>
             </tr>
         </table>
     </div>
