--- a/client/views/partials/admin/customers/truckOwners.html
+++ b/client/views/partials/admin/customers/truckOwners.html
@@ -14,8 +14,8 @@
         <li class="col-xs-4 pull-right">
             <form role="search">
                 <div class="input-group add-on">
-                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" ng-model="truckOwnerSearch" ng-change="initTruckOwner('', truckOwnerSearch);">
-                    <div class="input-group-btn">
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" ng-model="truckOwnerSearch" >
+                    <div class="input-group-btn" ng-click="initTruckOwner('', truckOwnerSearch);">
                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
                 <td data-title="'ID'" sortable="'userId'" class="clickable-item">
                     {{owners.userId}}
                 </td>-->
-                <td data-title="'User Name'" sortable="'userId'" class="clickable-item">
+                <td data-title="'User Name'" sortable="'userId'" class="clickable-item" >
                     {{owners.userName}}
                 </td>
                 <td data-title="'Customer Name'" sortable="'firstName'" class="clickable-item">
@@ -74,8 +74,8 @@
                             class="glyphicon glyphicon-trash  "></span></a>
                 </td>
             </tr>
-            <tr ng-if="!currentPageOfTruckOwners || currentPageOfTruckOwners.length === 0">
-                <td colspan="8">No Truck Owners Records exist.</td>
+            <tr ng-if="!currentPageOfTruckOwners || currentPageOfTruckOwners.length === 0" class="text-center">
+                <td colspan="9">No Truck Owners Records exist.</td>
             </tr>
         </table>
     </div>
