--- a/client/views/partials/admin/services/gpsDevices.html
+++ b/client/views/partials/admin/services/gpsDevices.html
@@ -126,23 +126,26 @@
                  selected-model="selectedDevices"
                  extra-settings="selected_baseline_settings" class="col-sm-4 col-xs-12" translation-texts="customText">
             </div>-->
-            <div col-sm-2 >
+            <div class="col-sm-6">
                 <textarea ng-model="selectedDevices" class="form-control" cols="22" rows="15">
 
                 </textarea>
             </div>
-            <div class="col-sm-2 col-xs-12">
+            <div class="col-sm-4 col-xs-12">
                 <select class="form-control" ng-model="assignedTo">
                     <option value="" selected>Transfer To</option>
                     <option ng-repeat="employee in employees" value="{{employee._id}}">{{employee.displayName}}
                     </option>
                 </select>
             </div>
+            <div class="col-sm-6">
+                <div ng-show="error" style="color: red;">{{error}}</div>
+            </div>
         </div>
-        <div ng-show="error">{{error}}</div>
+
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary" type="button" ng-click="transferDevices()">Submit</button>
-        <button class="btn btn-danger" type="button" ng-click="closeAssignDevice()">Cancel</button>
+        <button class="btn btn-danger" type="button" ng-click="close()">Cancel</button>
     </div>
 </script>
