--- a/client/views/partials/admin/services/deviceManagement.html
+++ b/client/views/partials/admin/services/deviceManagement.html
@@ -4,16 +4,19 @@
         <li class="col-xs-4 pull-right">
             <form role="search">
                 <div class="input-group add-on">
-                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" ng-model="searchString" ng-change="init();">
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term"
+                           ng-model="searchString" ng-change="init();">
                     <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
+                        </button>
                     </div>
                 </div>
             </form>
         </li>
         <div class="clearfix"></div>
     </ul>
-    <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive" ng-table="deviceManagementParams">
+    <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive"
+           ng-table="deviceManagementParams">
         <tr ng-repeat="employee in currentPageOfDeviceDetails" style="text-align: center;">
 
             <td data-title="'S No'">
@@ -23,13 +26,16 @@
                 {{employee._id.employeeName[0]}}
             </td>
             <td data-title="'Assigned Devices'" sortable="'totalDevices'" class="clickable-item">
-                <a href="#" ui-sref="services.assignedGpsDevices({type:'assigned', accountId:employee._id.assignedTo})">{{employee.totalDevices}}</a>
+                {{employee.totalDevices}}
             </td>
-            <td data-title="'Devices Inhand'"  class="clickable-item">
-                {{employee.totalDevices - employee.installedDevices}}
+            <td data-title="'Devices Inhand'" class="clickable-item">
+                <a href="#"
+                   ui-sref="services.inHandGpsDevices({type:'inHand', accountId:employee._id.assignedTo, Name:employee._id.employeeName[0]})">
+                    {{employee.totalDevices - employee.installedDevices}}</a>
             </td>
             <td data-title="'Devices Sold'" sortable="'installedDevices'" class="clickable-item">
-                {{employee.installedDevices}}
+                <a href="#" ui-sref="services.installedGpsDevices({type:'sold', accountId:employee._id.assignedTo, Name:employee._id.employeeName[0]})">
+                    {{employee.installedDevices}}</a>
             </td>
             <td data-title="'Installed/Payment Deposited'" sortable="'installedDevices'" class="clickable-item">
                 {{employee.installedDevices}}/{{employee.installedDevices}}
