--- a/client/views/partials/admin/services/inHandGpsDevices.html
+++ b/client/views/partials/admin/services/inHandGpsDevices.html
@@ -1,18 +1,17 @@
 <div ng-controller="deviceManagementCrtl" ng-init="getAssignedDevices();">
     <ul class="list-inline title-ul">
-        <li class="pull-left name-head">Assigned GPS Devices List</li>
+        <li class="pull-left name-head">In Hand GPS Devices List : <b>{{Name | uppercase}}</b></li>
         <div class="clearfix"></div>
     </ul>
     <div class="table-res">
     <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive"
-           ng-table="deviceManagementParams">
+           ng-table="deviceParams">
         <tr ng-repeat="device in currentPageOfDeviceDetails" style="text-align: center;">
-
             <td data-title="'S No'">
                 {{$index+1}}
             </td>
             <td data-title="'Accounts'" sortable="'employeeName'" class="clickable-item">
-                {{device._id.employeeName[0]}}
+                {{device.userName}}
             </td>
             <td data-title="'Device ID'" sortable="'totalDevices'" class="clickable-item">
                 {{device.deviceId || '--'}}
@@ -26,25 +25,12 @@
             <td data-title="'IMEI Number'" sortable="'installedDevices'" class="clickable-item">
                 {{device.imei || '--'}}
             </td>
-            <td data-title="'Last GPS Update'" sortable="'inactiveDevices'" class="clickable-item">
-                {{device.simPhoneNumber || '--'}}
-            </td>
-            <td data-title="'Plan Expiry Date'" sortable="'damagedDevices'" class="clickable-item">
-                {{device.simPhoneNumber || '--'}}
-            </td>
             <td data-title="'Date Created'" sortable="'damagedDevices'" class="clickable-item">
-                {{device.createdAt | date:'dd-MM-yyyy'}}
-            </td>
-            <td data-title="'Installed By'" sortable="'damagedDevices'" class="clickable-item">
-                {{device.installedBy.userName | limitTo:8}}
-            </td>
-            <td data-title="'Device Payment'" sortable="'damagedDevices'" class="clickable-item">
-                {{device.devicePaymentStatus || '--'}}
+                {{device.createdAt | date:'dd-MM-yyyy' || '--'}}
             </td>
             <td data-title="'Status'" sortable="'damagedDevices'" class="clickable-item">
                 {{device.isActive || '--'}}
             </td>
-
         </tr>
         <tr ng-if="!currentPageOfDeviceDetails || currentPageOfDeviceDetails.length === 0">
             <td colspan="12">No Records exist.</td>
