--- a/client/views/partials/admin/services/gpsAccounts.html
+++ b/client/views/partials/admin/services/gpsAccounts.html
@@ -17,8 +17,8 @@
             <form role="search">
                 <div class="input-group add-on">
                     <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term"
-                           ng-model="searchString" ng-change="init();">
-                    <div class="input-group-btn">
+                           ng-model="searchString">
+                    <div class="input-group-btn" ng-click="init();">
                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
                         </button>
                     </div>
@@ -54,6 +54,9 @@
                 </td>
                 <td data-title="'Sold By'" sortable="'createdBy.userName'" class="clickable-item">
                     {{account.createdBy.userName | date:'dd-MM-yyyy'}}
+                </td>
+                <td data-title="'GPS'" sortable="'gpsEnabled'" class="clickable-item">
+                    {{account.gpsEnabled?'Enabled':'Disabled'}}
                 </td>
                 <td data-title="'ERP'" sortable="'erpEnabled'" class="clickable-item">
                     {{account.erpEnabled?'Enabled':'Disabled'}}
