--- a/client/views/partials/admin/services/gpsDevices.html
+++ b/client/views/partials/admin/services/gpsDevices.html
@@ -20,8 +20,8 @@
             <form role="search">
                 <div class="input-group add-on">
                     <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term"
-                           ng-model="searchString" ng-change="init();">
-                    <div class="input-group-btn">
+                           ng-model="searchString">
+                    <div class="input-group-btn" ng-click="init();">
                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
                         </button>
                     </div>
@@ -80,8 +80,8 @@
                 </a>
             </td>
         </tr>
-        <tr ng-if="!currentPageOfDevices || currentPageOfDevices.length === 0">
-            <td colspan="8">No GPS Devices exist.</td>
+        <tr ng-if="!currentPageOfDevices || currentPageOfDevices.length === 0" class="text-center">
+            <td colspan="10">No GPS Devices exist.</td>
         </tr>
     </table>
 
