added tracker to add device

--- a/client/views/partials/admin/orderProcess/createTruckRequest.html
+++ b/client/views/partials/admin/orderProcess/createTruckRequest.html
@@ -19,7 +19,7 @@
 
                     </div>
                     <div class=" col-sm-6"
-                         ng-show=" truckRequest.customerType=='Registered' || truckRequest.customerType=='' ">
+                         ng-show=" truckRequest.customerType=='Registered'">
                         <div class="form-group select-box">
                             <ui-select ng-model="truckRequest.customer" theme="select2"
                                        style="min-width: 390px;"
